--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "latest",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
+    "@jiaminghi/data-view-react": "^1.2.5",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "latest",
     "@types/recharts": "^1.8.23",
