--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
-    "semi": ["error", "always"]
+    "semi": ["error", "always"],
+    "react/prop-types": 0
   }
 }
+ 
