--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@jiaminghi/data-view-react": "^1.2.5",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "latest",
+    "@mui/styles": "^5.2.3",
     "@types/recharts": "^1.8.23",
     "gatsby": "latest",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-react-helmet": "latest",
     "react": "latest",
     "react-dom": "latest",
